[feat]: dfs not working

--- a/src/pacman/search/Makefile
+++ b/src/pacman/search/Makefile
@@ -7,3 +7,9 @@ tinyMazeSearch:
 
 dfs:
 	python pacman.py -l tinyMaze -p SearchAgent -a fn=dfs
+
+dfsMedio:
+	python pacman.py -l mediumMaze -p SearchAgent -a fn=dfs	
+	
+dfsGrande:
+	python pacman.py -l bigMaze -p SearchAgent -a fn=dfs	
