--- a/src/pacman/search/Makefile
+++ b/src/pacman/search/Makefile
@@ -3,13 +3,22 @@ all:
 	python3 pacman.py
 
 tinyMazeSearch:
-	python pacman.py -l tinyMaze -p SearchAgent -a fn=tinyMazeSearch	
+	python3 pacman.py -l tinyMaze -p SearchAgent -a fn=tinyMazeSearch	
 
 dfs:
-	python pacman.py -l tinyMaze -p SearchAgent -a fn=dfs
+	python3 pacman.py -l tinyMaze -p SearchAgent -a fn=dfs
 
 dfsMedio:
-	python pacman.py -l mediumMaze -p SearchAgent -a fn=dfs	
+	python3 pacman.py -l mediumMaze -p SearchAgent -a fn=dfs	
 	
 dfsGrande:
-	python pacman.py -l bigMaze -p SearchAgent -a fn=dfs	
+	python3 pacman.py -l bigMaze -p SearchAgent -a fn=dfs	
+
+bfs:
+	python3 pacman.py -l tinyMaze -p SearchAgent -a fn=bfs
+
+bfsMedio:
+	python3 pacman.py -l mediumMaze -p SearchAgent -a fn=bfs	
+	
+bfsGrande:
+	python3 pacman.py -l bigMaze -p SearchAgent -a fn=bfs	
